src/objects/RawMaterial__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <length>1</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERPItemCode__c</fullName>
        <externalId>true</externalId>
        <label>ERP Item Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeadTime__c</fullName>
        <label>LeadTime</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ListPrice__c</fullName>
        <label>ListPrice</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MarerialCode__c</fullName>
        <label>MarerialCode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Material__c</fullName>
        <label>Material</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>R_Description__c</fullName>
        <label>R# Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Raw Material</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>R_Description__c</columns>
        <columns>Active__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Raw Material</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Raw Material</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>